# resume-chatter

./: .air.toml  .gitignore  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  justfile  main.go  package-lock.json  root.go  root_test.go  tailwind.config.js
.cspell/: project-words.txt
.github/workflows/: go-staticcheck.yml
cmd/askclient/: main.go
cmd/bufserver/: main.go
cmd/lcgoclient/: main.go
cmd/templ-cat/: main.go
cmd/webserver/: defaults.cue  main.go  schema.cue
cue.mod/: module.cue
internal/ci/github/: .gitignore  ci_tool.cue  go-staticcheck.cue  workflows.cue
internal/model/: types.go
protoc/chat/v1/: chat.proto
python/: .mypy.ini  README.md  pyproject.toml
python/src/resume_chatter/: __main__.py  main.py  serve.py
views/components/: accordian.templ  alert.templ  button.templ  chat.templ  textarea.templ
views/pages/: index.templ
