[project]
name = "resume-chatter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Brian Fallik", email = "bfallik@gmail.com"},
]
dependencies = [
    "langchain-openai>=0.1.23",
    "pypdf>=4.3.1",
    "langchain-community>=0.2.16",
    "faiss-cpu>=1.8.0.post1",
    "grpcio>=1.66.1",
    "protobuf>=5.28.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
